sort fixed on mobile

--- a/src/pages/venues/style.scss
+++ b/src/pages/venues/style.scss
@@ -200,6 +200,10 @@
           top: 50%;
           right: 0;
           transform: translateY(-50%);
+
+          @media screen and (max-width: 767px) {
+            display: none;
+          }
         }
 
 
